Update and rename 2. README.md to 0. README.md

--- a/0. README.md
+++ b/0. README.md
@@ -23,10 +23,11 @@ This project presents interpretable machine learning models to predict colonizat
 - **Top Predictors**: Central venous catheter, nasogastric tube, prior antibiotics, long-term care admission.
 
 ## 📁 Repository Structure
-- `outcome_of_code/`: Generated results including figures, tables, and supplementary materials.
-- `1. CPE code/`: Jupyter notebook for data preprocessing, model training, evaluation, coefficients of logistic regression, and SHAP interpretation.
-- `2. README.md`: Project summary and usage instructions.
-  
+- `outcome of code_1/`: Generated results including figures, tables, and supplementary material 1.
+- `outcome of code_2/`: Generated results including supplementary material 2.
+- `1. Overall_CPE_prediction_code/`: Jupyter notebook for data preprocessing, model training, evaluation, coefficients of logistic regression, and SHAP interpretation.
+- `2. Supplemental_material_2_Generation/`: Comparing the baseline characteristics of the 2022 training cohort and the 2023 validation
+
 > ⚠️ **Note**: The datasets used in this study are not included in the repository due to patient privacy and institutional policies.
 
 ## ✉️ Contact
